[project]
name = "claude-usage-plz"
version = "0.1.0"
description = "Check your Claude Max/Pro usage limits from the command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hong Yang" },
]
keywords = ["claude", "usage", "anthropic", "cli", "claude-code", "rate-limit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "pexpect>=4.8",
    "pyte>=0.8",
]

[project.scripts]
claude-usage = "claude_usage:main"

[project.urls]
Homepage = "https://github.com/hyang0129/claude-usage-plz"
Source = "https://github.com/hyang0129/claude-usage-plz"
Issues = "https://github.com/hyang0129/claude-usage-plz/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[tool.pytest.ini_options]
markers = ["integration: live tests requiring authenticated claude"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
